--- a/todo
+++ b/todo
@@ -9,6 +9,8 @@
 
 - Wochenanzeige
 
+- Neues Fenster mit Wertzusammenfassung %, erste eingetragene, letzte eingetragene (+ Sortieren nach größten Kg oder größter Änderung, oder nach Workoutgruppen)
+
 - Fehler: Im Nachhinein bearbeitete Werte werden an das Ende der txt gespeichert
 
 
